fixed recordlabel word wrapping in chrome

--- a/_style.scss
+++ b/_style.scss
@@ -1632,6 +1632,10 @@ a[href^='alltorrents.php?action=history&userid='] {
     float: left;
 }
 
+#recordlabel .sidebar .pad {
+	word-wrap: break-word;
+}
+
 .box .head {
     color: $primaryfontcolour;
     font-size: 1.25em;
